--- a/MovieExplorer.Droid/packages.config
+++ b/MovieExplorer.Droid/packages.config
@@ -7,4 +7,5 @@
   <package id="MvvmCross.Platform" version="4.4.0" targetFramework="monoandroid60" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid60" />
   <package id="System.Net.Http" version="4.3.1" targetFramework="monoandroid60" />
+  <package id="Validation" version="2.4.13" targetFramework="monoandroid60" />
 </packages>
