--- a/MovieExplorer.Droid/MovieExplorer.Droid.csproj
+++ b/MovieExplorer.Droid/MovieExplorer.Droid.csproj
@@ -109,6 +109,9 @@
     <Compile Include="Extensions\ActivityExtensions.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ActivityTracker.cs" />
+    <Compile Include="Services\ToastService.cs" />
+    <Compile Include="Services\UriService.cs" />
     <Compile Include="Setup.cs" />
   </ItemGroup>
   <ItemGroup>
