--- a/MovieExplorer.Droid/MovieExplorer.Droid.csproj
+++ b/MovieExplorer.Droid/MovieExplorer.Droid.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ActivityTracker.cs" />
+    <Compile Include="Services\FileService.cs" />
     <Compile Include="Services\ToastService.cs" />
     <Compile Include="Services\UriService.cs" />
     <Compile Include="Setup.cs" />
