--- a/MovieExplorer.Droid/packages.config
+++ b/MovieExplorer.Droid/packages.config
@@ -8,4 +8,5 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid60" />
   <package id="System.Net.Http" version="4.3.1" targetFramework="monoandroid60" />
   <package id="Validation" version="2.4.13" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.v4" version="21.0.3.0" targetFramework="monoandroid60" />
 </packages>
